create 01-입력과 출력

--- a/C언어/01-입력과 출력.md
+++ b/C언어/01-입력과 출력.md
@@ -1,3 +1,6 @@
+# 표준 입출력 함수
+
+'''c
 #include<stdio.h>
 
 int main(void)
@@ -5,3 +8,4 @@ int main(void)
   printf("HELLO WORLD");
   return 0;
 }
+'''
