update 01-입력과 출력

--- a/C언어/01-입력과 출력.md
+++ b/C언어/01-입력과 출력.md
@@ -1,11 +1,10 @@
 # 표준 입출력 함수
 
-'''c
-#include<stdio.h>
-
+<pre>
+<code> #include<stdio.h>
 int main(void)
 {
   printf("HELLO WORLD");
   return 0;
 }
-'''
+</code></pre>
