Update 01-표준 입출력 함수.md

--- a/C언어/01-표준 입출력 함수.md
+++ b/C언어/01-표준 입출력 함수.md
@@ -5,7 +5,8 @@
 ### 기본적인 사용 방법은 printf("반갑습니다"); 라고 작성하면 "반갑습니다" 라는 문장이 출력된다.
 
 <pre>printf()로 문자열 출력
-<code>#include<stdio.h>
+<code>
+#include<stdio.h>
 int main(void)
 {
   printf("반갑습니다.");  //문자열 출력
@@ -18,7 +19,8 @@ int main(void)
 
 
 <pre>숫자를 문자열로 출력
-<code>#include<stdio.h>
+<code>
+#include<stdio.h>
 int main(void)
 {
   printf("123+456789\n"); //숫자와 덧셈 연산자 사용
@@ -28,7 +30,8 @@ int main(void)
 
 
 <pre>출력 형식 지정자 사용
-<code>#include<stdio.h>
+<code>
+#include<stdio.h>
 int main(void)
 {
   printf("%d %d\n", 123, 456789); //출력 형식 지정자 선언
@@ -36,3 +39,11 @@ int main(void)
 }</code></pre>
 출력하고자 하는 숫자의 개수와 일대일로 대응시켜야 한다. 
 %d는 정수형을 출력할 때 사용하며, 실수형은 %f, 문자는 %c, 문자열 %s등 다양하게 있다.
+
+## scanf_s() 기본 사용법
+### 데이터를 입력 받을 때 사용하며 printf()와 마찬가지로 stdio 헤더파일을 불러와야 사용할 수 있다.
+### 값을 입력 받기 위해 다음과 같이 선언하여 사용한다. 
+### * 정수형 또는 실수형 값 입력 <pre><code> scanf_s("표준 입력 형식 지정자", &변수명);</code></pre>
+### * 문자 또는 문자열 값 입력 <pre><code> scnaf_s("표준 입력 형식 지정자", &변수명, sizeof(변수명 또는 자료형));
+### * 변수 2개를 사용하여 값 입력 <pre><code> int 변수명1, 변수명2; \n scnaf_s("%d %d", &변수명1, &변수명2, sizeof(변수명1), sizeof(변수명2)); 이때, 입력하는 값이 문자 또는 문자열이 아니면 sizeof(변수명)은 생략할 수 있다.
+### * 배열을 사용한 문자열 입력 <pre><code> char 배열명[]; \n scanf_s("표준 입력 형식 지정자", 배열명, sizeof(배열명)); 
