--- a/C언어/01-표준 입출력 함수.md
+++ b/C언어/01-표준 입출력 함수.md
@@ -47,8 +47,6 @@ int main(void)
 
 ### * 문자 또는 문자열 값 입력 <pre><code> scnaf_s("표준 입력 형식 지정자", &변수명, sizeof(변수명 또는 자료형));
 
-### * 변수 2개를 사용하여 값 입력 <pre><code> int 변수명1, 변수명2;  
-### scnaf_s("%d %d", &변수명1, &변수명2, sizeof(변수명1), sizeof(변수명2)); </code></pre>
+### * 변수 2개를 사용하여 값 입력 <pre><code> int 변수명1, 변수명2;                                                                                                                   scnaf_s("%d %d", &변수명1, &변수명2, sizeof(변수명1), sizeof(변수명2)); </code></pre>
 이때, 입력하는 값이 문자 또는 문자열이 아니면 sizeof(변수명)은 생략할 수 있다.
-### * 배열을 사용한 문자열 입력 <pre><code> char 배열명[]; 
-###  scanf_s("표준 입력 형식 지정자", 배열명, sizeof(배열명));</code></pre> 
+### * 배열을 사용한 문자열 입력 <pre><code> char 배열명[];                                                                                                                         scanf_s("표준 입력 형식 지정자", 배열명, sizeof(배열명));</code></pre> 
