--- a/C언어/01-표준 입출력 함수.md
+++ b/C언어/01-표준 입출력 함수.md
@@ -42,6 +42,31 @@ int main(void)
 출력하고자 하는 숫자의 개수와 일대일로 대응시켜야 한다. 
 %d는 정수형을 출력할 때 사용하며, 실수형은 %f, 문자는 %c, 문자열 %s등 다양하게 있다.
 
+<pre>실수형 데이터의 자릿수를 지정하여 출력
+<code>
+#include <stdio.h>
+int main(void)
+{                          
+	printf("｜%f｜", 358.123456);                // 실수형 기본 자릿수인 소수 여섯째 자리까지 무조건 출력
+	printf(": 실수형 기본 자릿수\n");             // 강제 개행 문자 사용
+
+	printf("｜%.2f｜", 358.123456);              // 소수 둘째 자리까지 출력, 셋째 자리에서 반올림, 숫자는 오른쪽 정렬
+	printf(": 소수 둘째 자리까지 출력\n");        // 강제 개행 문자 사용
+
+	printf("｜%6.1f｜", 358.123456);             // 전체 6개의 자리 확보, 소수 첫째 자리까지 출력, 둘째 자리에서 반올림, 숫자는 오른쪽 정렬
+	printf(": 전체 6자리, 소수 첫째 자리까지 출력\n");              // 강제 개행 문자 사용
+
+	printf("｜%-6.1f｜", 358.123456);            // 전체 6개의 자리 확보, 소수 첫째 자리까지 출력, 둘째 자리에서 반올림, 숫자는 왼쪽 정렬 
+	printf(": 전체 6자리, 왼쪽정렬, 소수 첫째 자리까지 출력\n");     // 강제 개행 문자 사용
+
+	printf("｜%7.3f｜", 358.123456);             // 전체 7개이 자리 확보, 소수 셋째 자리까지 출력
+	printf(": 전체 7자리, 소수 첫째 자리까지 출력\n");              // 강제 개행 문자 사용
+
+	printf("｜%010.3f｜", 358.123456);           // 전체 10개의 자리 확보, 소수 셋째 자리까지 출력, 빈칸 0으로 채움, 숫자는 오른족 정렬
+	printf(" 전체 10자리, 빈칸은 0으로 채움, 소수 셋째 자리까지 출력\n");      // 강제 개행 문자 사용
+	return 0;                 // 프로그램 종료
+}</code></pre>
+
 ## scanf_s() 기본 사용법
 ### 데이터를 입력 받을 때 사용하며 printf()와 마찬가지로 stdio 헤더파일을 불러와야 사용할 수 있다.
 ### 값을 입력 받기 위해 다음과 같이 선언하여 사용한다. 
@@ -58,3 +83,37 @@ int main(void)
 
 ### * 배열을 사용한 문자열 입력 
 <pre><code> char 배열명[]; scanf_s("표준 입력 형식 지정자", 배열명, sizeof(배열명));</code></pre> 
+
+<pre>정수 데이터 1개를 입력 받아 출력
+<code>
+#include<stdio.h>
+int main(void)
+{
+  int num;      //정수형 변수 선언
+  printf("정수 입력 : ");   //화면에 문장 출력
+  scanf_s("%d", &num);     //입력 받은 값을 메모리 주소에 저장
+  printf("입력 받은 값 출력 : %d", num);    
+  return 0;
+}</code></pre>
+scnaf_s()를 사용하여 num이라는 변수를 저장하고 출력했다.
+
+<pre>입력받은 정수 데이터 2개로 덧셈 연산을 하는 프로그램
+<code>
+#include<stdio.h>
+int main(void)
+{
+  int num1, num2, hap;      //정수형 변수 3개 선언
+  printf("첫 번째 정수 입력 : ");   
+  scanf_s("%d", &num1);       // 첫 번째 정수 입력
+
+  printf("두 번째 정수 입력 : ");
+  scanf_s("%d", &num2);       // 두 번째 정수 입력
+
+  hap = num1 + num2;          // 덧셈 연산
+  printf("덧셈 결과 %d + %d = %d", num1, num2, hap);
+  return 0;
+}</code></pre>
+num1 과 num2를 입력 받아 저장하고, hap 이라는 변수에 num1 과 num2를 더한 값을 저장하고 출력했다.
+# 문자 코드
+아스키코드를 배웠는데 0은 48, A는 65, a는 97로 표현한다. 
+이것만 기억하면 나머지 숫자와 알파벳의 아스키코드를 알 수 있다.
