--- a/C언어/02-변수와 자료형.md
+++ b/C언어/02-변수와 자료형.md
@@ -19,7 +19,7 @@
 ## 자료형
  자료형은 데이터를 저장하기 위한 공간인 변수를 선언할 때 메모리의 크기를 지정하는 단위를 의미한다.
 
-자료형의 종류에는 
+자료형의 종류에는 정수형, 실수형, 문자형의 세 가지 자료형을 제공한다.
 
 정수형에는 short(2바이트), int(4바이트), long(4바이트), long long(8바이트)
 
@@ -27,3 +27,62 @@
 
 문자형에는 char(1바이트)가 있다.
 
+ 만약 메모리 공간을 무조건 크게 차지하는 자료형을 사용하면 쓸데없이 메모리 공간만 차지하고 사용하지 않는 공간이 남아 메모리 낭비가 발생합니다. 
+
+ 따라서 자료형은 변수의 용도에 맞게 선언하여 사용해야한다.
+
+
+## 변수의 사용 
+ 변수 앞에 자료형을 선언하여 그 변수가 어떤  데이터값을 저장할 것인지 컴파일러에게 미리 알리는 것을 "변수 선언"이라고 한다.
+
+<pre>변수 선언
+<code>
+int a;  // int형 변수 a 선언
+int b;  // int형 변수 b 선언
+int sum; // int형 변수 sum선언
+</code></pre>
+이와같이 변수를 선언하면, 각 변수에는 정수형 데이터를 대입할 수 있는 메모리 공간이 확보되고 변수 이름이 메모리 공간에 붙여진다.
+
+<pre>변수 초기화
+<code>
+int sum = 0;  // 4바이트 크기의 int형 변수값을 0으로 초기화
+</code></pre>
+ 변수를 선언하면서 초기값을 변수에 대입하는 것을 "변수 초기화"라고 한다.
+
+ 
+ 
+ 실수형 변수는 소수점을 포함하는 데이터를 처리하기 위한 저장 공간이다.
+
+<pre>4바이트 실수형 자료형
+<code>
+printf("float형 출력 = %f", 3.123456789);
+</code></pre>
+float형으로 선언한 실수형 변수는 소수 여섯째 자리까지만 유효한 값을 출력한다.
+
+따라서 이 코드의 출력 결과값은 3.123456까지 출력된다.
+
+<pre>실수형 데이터로 연산한 결과값을 실수형으로 출력
+<code>
+#include<stdio.h>
+
+int main(void)
+{
+  float height, weight, swap, bmi;  //4바이트 실수형 자로형 변수
+
+  printf("키와 체중은 소수 둘째 자리 까지 입력\n");
+  printf("키 입력(cm) : ");
+  scanf_s("%f", &height);
+  printf("체중 입력(kg) : ");
+  scanf_s("%f", &weight);
+
+  swap = height / 100;  // cm를 m로 바꿔줌
+  bmi = weight / (swap * swap);
+  printf("BMI = 체중(kg) / (키(m) * 키(m))\n");
+  printf("센티미터로 입력한 키를 미터로 환산해서 사용\n");
+  printf("BMI = %.2f\n", bmi);    // 소수 둘째 자리까지 출력하기 위해 %.2f 사용
+  return 0;
+}</code></pre>
+ 실수형 자료형 변수 float를 사용했다. 
+
+<pre>캐스트 연산자로 자료형 변환
+<code>
