--- a/C언어/02-변수와 자료형.md
+++ b/C언어/02-변수와 자료형.md
@@ -86,3 +86,67 @@ int main(void)
 
 <pre>캐스트 연산자로 자료형 변환
 <code>
+#include<stdio.h>
+
+int main(void)
+{
+  int num1, num2;   // 4바이트 정수형 변수 선언
+  float result;     // 4바이트 실수형 변수 선언
+
+  printf("첫번째 정수 입력 : ");
+  scanf_s("%d", &num1);
+  printf("두번째 정수 입력 : ");
+  scanf_s("%d", &num2);
+
+  result = num1 / num2;
+  printf("두 수의 나눗셈 결과 : %f", result);
+
+  result = (float)num1 / num2;      //캐스트 연산자로 자료형 강제 변환
+  printf("두 수의 나눗셈 결과 : %f\n", result);
+  return 0;
+}</code></pre>
+ 먼저 캐스트 연산자는 자료형을 강제로 변환하는 연산자이다. 
+
+예를 들어 정수형 자료형으로 선언한 변수를 실수형으로 강제 변환할 때 사용한다.
+
+캐스트 연산자는 변수명 앞에 변환하고자 하는 자료형을 선언하는 형식으로 사용한다. -> "(자료형)변수명"
+
+위의 코드를 보면 result 값을 계산할 때 num1앞에 (float)를 사용하여 정수형을 실수형 변수로 변환했다. 
+
+이로 인해서 출력 결과값은 소수점 아래 숫자가 0으로 출력되지 않고 알맞게 출력된다.
+
+이렇게 캐스트 자료형을 사용하여 자료형을 변환하는 것을 "강제 자료형 변환" 또는 "명시적 자료형 변환"이라고 한다.
+
+## 상수
+상수에서는 기호 상수에 대해 작성했다.
+
+기호 상수는 숫자 대신 특정 문자를 사용하는 것을 말하는데, 보통 상수에 이름을 붙여야 할 때 사용한다.
+
+코드를 작성하고 수정할 때 상수로 작성한다면 상수로 코딩된 부분을 모두 찾아서 수정해야 하지만, 기호 상수를 사용하면 기호 상수의 부분만 간단하게 수정할 수 있어서 편리하다.
+
+#define 명령으로 기호 상수를 선언할 수 있다.
+
+예를 들어 #define PI 3.141592와 같이 선언하면 소스 코드에서 기호 상수 PI를 찾아서 모두 3.141592로 대체한다.
+
+#define 명령은 main() 함수 외부에 선언해야 한다. 그 이유는 외부에서도 참조할 수 있도록 하기 위함이다. 
+
+또한, ;(세미콜론)을 붙이지 않는다.
+
+<pre>#define 명령으로 기호 상수 선언
+<code>
+#include<stdio.h>
+#define PI 3.141592   // 기호 상수 선언
+
+int main(void)
+{
+  float r, area = 0;  // 실수형 변수 선언
+
+  printf("원의 넓이 구하는 프로그램\n");
+  printf("반지름 입력(cm) : ");
+  scanf_s("%f", &r);
+  area = PI * r * r;    // 원 넓이 계산
+
+  printf("원의 넓이는 %f입니다.\n", area);
+  return 0;
+}</code></pre>
+
