--- a/C언어/03-연산자.md
+++ b/C언어/03-연산자.md
@@ -7,7 +7,40 @@
 <code>
 #include<stdio.h>
 
-</code></pre>
+int main(void)
+{
+  int num1,num2,hap,cha,gob,div,nam;
+  num1 = 25;
+  num2 = 2;
+  
+  hap = num1 + num2;
+  cha = num1 - num2;
+  gob = num1 * num2;
+  div = num1 / num2;
+  nam = num1 % num2;  // 나머지 값 산출
+
+  printf("1. 덧셈 : %d\n", hap);
+  printf("2. 뺄셈 : %d\n", cha);
+  printf("3. 곱셈 : %d\n", gob);
+  printf("4. 나눗셈 : %d\n", div);
+  printf("5. 나머지값 : %d\n", nam);
+  return 0;
+}</code></pre>
+정수와 정수의 나눗셈 연산에서는 실수형 데이터가 출력될 수 없다. 실수의 결과값을 출력하기 위해선 두 정수 중에서 하나를 캐스트 연산자를 사용하여 강제 자료형 변환을 하고, 연산 결과를 저장할 변수도 실수형 변수로 변환해야 한다. 
+
+ 대입 연산자는 연산식에서 가장 많이 사용하는 것으로 오른쪽에 있는 값을 왼쪽에 대입하는 역할을 하며, 등호(=)를 사용한다.
+
+ <pre>대입 연산자는 다음과 같이 하나의 문장에 여러 개를 사용할 수 있다.
+ <code>
+ a = b = c = 500;
+ </code></pre>
+ 이와 같은 표현은 여러 개의 변수를 모두 같은 값으로 초기화할 때 사용하며, 연산자 우선순위는 오른쪽에서 왼쪽으로 수행된다.
+
+ -> c = 500 -> b = c 이므로 b = 500, 따라서 a = 500 이 된다.
+
+ 
+
+ 복합 대입 연산자는 
 ## 증감 연산자와 관계 연산자
 
 ## 논리 연산자와 조건 연산자
