--- a/C언어/03-연산자.md
+++ b/C언어/03-연산자.md
@@ -1,7 +1,7 @@
 # 연산자
 
 ## 산술 연산자와 대입 연산자
- 산술 연산자는 가장 기본적인 계산을 위한 것으로 덧셈(+), 뺄셈(-), 곱셈(*), 나눗셈(/)과 나머지(%) 연산자를 사용한다.
+ -산술 연산자는 가장 기본적인 계산을 위한 것으로 덧셈(+), 뺄셈(-), 곱셈(*), 나눗셈(/)과 나머지(%) 연산자를 사용한다.
 
 <pre>두 정수의 사칙연산과 나머지 연산 프로그램
 <code>
@@ -28,7 +28,7 @@ int main(void)
 }</code></pre>
 정수와 정수의 나눗셈 연산에서는 실수형 데이터가 출력될 수 없다. 실수의 결과값을 출력하기 위해선 두 정수 중에서 하나를 캐스트 연산자를 사용하여 강제 자료형 변환을 하고, 연산 결과를 저장할 변수도 실수형 변수로 변환해야 한다. 
 
- 대입 연산자는 연산식에서 가장 많이 사용하는 것으로 오른쪽에 있는 값을 왼쪽에 대입하는 역할을 하며, 등호(=)를 사용한다.
+ -대입 연산자는 연산식에서 가장 많이 사용하는 것으로 오른쪽에 있는 값을 왼쪽에 대입하는 역할을 하며, 등호(=)를 사용한다.
 
  <pre>대입 연산자는 다음과 같이 하나의 문장에 여러 개를 사용할 수 있다.
  <code>
@@ -38,11 +38,166 @@ int main(void)
 
  -> c = 500 -> b = c 이므로 b = 500, 따라서 a = 500 이 된다.
 
- 
+ 복합 대입 연산자는 "연산자 ="의 형식으로 사용한다. 예를 들어 a = a * 5는 a *= 5와 같은 의미이다.
 
- 복합 대입 연산자는 
+ <pre>복합 대입 연산자의 종류 
+ <code>
+ sum += cnt   -->  sum = sum + cnt
+ sum -= cnt   -->  sum = sum - cnt
+ sum *= cnt   -->  sum = sum * cnt
+ sum /= cnt   -->  sum = sum / cnt
+ </code></pre>
+ 등 더 있지만 이렇게 간단하게 쓸 수 있는 것을 볼 수 있다.
+ <pre>복합 대입 연산자 사용
+ <code>
+ #include<stdio.h>
+
+ int main(void)
+ {
+   int result = 10, num = 20;
+
+   result *= num - 5;   // result = result * (num - 5)
+   printf("계산 결과 값 : %d\n", result);
+   return 0;
+ }</code></pre>
+ 이렇게 사용할 수 있다. 복합 대입 연산자는 다른 연산자에 비해 우선순위가 낮으므로 다른 연산자를 먼저 처리하고 난 다음에 수행된다.
+
 ## 증감 연산자와 관계 연산자
+-증감 연산자는 변수의 값을 1 증가시킬 때 ++를 사용하고, 1 감소시킬 때 --를 사용한다.
+
+전위형 증감 연산자와 후위형 증감 연산자가 있다.
+<pre>전위형 증감 연산자
+<code>
+a = 8;  
+val = ++a;  // a의 값을 1증가시켜 a = 9, 1 증가된 값을 val에 대입하여 val = 9
+
+a = 8;      
+val = --a;  // a의 값을 1 감소시켜 a = 7, 1감소된 a값을 val에 대입하여 val = 7
+</code></pre>
+ 전위형 증감 연산자는 제시한 값에 먼저 증감 연산을 수행한 후 그 결과값을 변수에 대입한다. 
+
+ 그 이유는 대입 연산자인 등호(=)보다 증감 연산자가 먼저 수행되기 때문이다.
+
+ <pre>후위형 증감 연산자
+ <code>
+ a = 8;
+ val = a++; // 1증가되기 전의 a값을 val에 대입하여 val = 8, a의 값을 증가시켜 a = 9
+
+ a = 8;
+ val = a--; // 1감소되기 전의 값을 val에 대입하여 val = 8, a의 값을 감소시켜 a = 7
+ </code></pre>
+ 후위형 증감 연산자는 제시한 값을 먼저 변수에 대입한 다음 증감 연산을 수행한다.
+
+ 그 이유는 대입 연산자인 등호(=)보다 증감 연산자가 나중에 수행되기 때문이다.
+
+ -관계 연산자는 연산자를 기준으로 왼쪽과 오른쪽에 있는 두 개의 피연산자를 비교하여 참과 거짓으로 결과를 표현한다.
+
+ 결과가 참이면 1, 거짓이면 0을 출력하여 참과 거짓을 판별한다.
+ <pre>관계 연산자의 종류
+ <code>
+ a == b // a는 b와 같음
+ a != b // a는 b와 같지않음
+ a > b  // a는 b보다 큼
+ a < b  // a는 b보다 작음
+ a >= b // a는 b보다 크거나 같음
+ a <=b  // a는 b보다 작거나 같음
+ </code></pre>
+ =와 ==를 혼동하지 않도록 주의해야한다. 
+ 
+ '='의 경우는 대입하라는 의미이고, '=='의 경우는 값이 같다는 표현이다.
+
+ <pre>관계 연산자 사용
+ <code>
+ #include<Stdio.h>
+
+int main(void)
+{
+	int a, b;
+
+	printf("첫 번째 정수 입력 : ");
+	scanf_s("%d", &a);
+	printf("두 번째 정수 입력 : ");
+	scanf_s("%d", &b);
+
+	printf("a == b : %d\n", a == b);
+	printf("a != b : %d\n", a != b);
+	printf("a > b : %d\n", a > b);
+	printf("a < b : %d\n", a < b);
+	printf("a >= b : %d\n", a >= b);
+	printf("a <= b : %d\n", a <= b);
+	printf("a == 5 : %d\n", a == 5);
+	printf("5 == a : %d\n", 5 == a);
+	return 0;
+}</code></pre>
 
 ## 논리 연산자와 조건 연산자
+-논리 연산자는 연산식에서 2개 또는 여러 개의 피연산자를 대상으로 AND(&&), OR(||), NOT(!)이 논리 연산을 하여 참이면 1, 거짓이면 0을 결과 값으로 출력한다.
 
-## 기타 연산자
+논리 연산자의 우선 순위는 NOT > AND > OR의 순서이다.
+
+<pre>논리 연산자의 종류
+<code>
+!a     --> a가 참이면 거짓, 거짓이면 참
+a && b --> a와 b모두 참일 경우 참, 하나라도 거짓이면 거짓
+a || b --> a와 b중에서 하나라도 참이면 참, 모두 거짓이면 거짓
+</code></pre>
+!(NOT) 연산자는 부정의 의미로, 참은 거짓, 거짓은 참으로 변환하는 역할을 한다.
+
+&&(AND) 연산자는 2개 이상의 피연산자가 모두 참일 경우 참의 값으로 1을 출력하고, 어느 하나라도 거짓이면 0을 출력한다. 주로 두 가지 조건을 모두 충족하고자 할 때 사용한다.
+
+||(AND) 연산자는 2개 이상의 피연산자 중에서 어느 하나라도 참이면 연산 결과가 참이 되어 1을 출력하고, 모두 거짓이면 0을 출력한다.
+
+<pre>논리 연산자 사용
+<code>
+#include<stdio.h>
+
+int main(void)
+{
+	int a, b, c, val1, val2, val3, val4, val5;
+	a = 0, b = 5, c = 8;
+
+	val1 = a && b;
+	val2 = a || c;
+	val3 = (a > b) && (a < c);
+	val4 = !val3;
+	val5 = b && c;
+
+	printf("a = 0, b = 5, c = 8일 때\n");
+	printf("1. a && b : %d\n", val1);
+	printf("2. a || b : %d\n", val2);
+	printf("3. (a > b) && (a < c) : %d\n", val3);
+	printf("4. (3)번 값 !val3 : %d\n", val4);
+	printf("5. b && c : %d\n", val5);
+	return 0;
+}</code></pre>
+
+-조건 연산자는 3개의 피연산자를 사용하여 3항 연산자라고도 한다.
+
+"(조건식) ? 식1 : 식2"와 같이 조건식에 따라 참이면 "식1"을 수행하고, 거짓이면 "식2"를 수행한다.
+
+<pre>조건 연산자 사용
+<code>
+#include<stdio.h>
+
+int main(void)
+{
+	int num1, num2, max, min;
+
+	printf("정수 2개를 차례로 입력\n");
+
+	printf("첫 번째 정수 : ");
+	scanf_s("%d", &num1);
+
+	printf("두 번째 정수 : ");
+	scanf_s("%d", &num2);
+
+	max = (num1 > num2) ? num1 : num2;
+	min = (num1 < num2) ? num1 : num2;
+
+	printf("둘 중 큰 수 : %d\n", max);
+	printf("둘 중 작은 수 : %d\n", min);
+	return 0;
+}</code></pre>
+이 예제는 키보드로 정수값 2개를 입력받은 뒤 조건 연산자로 큰 수와 작은 수를 판별하여 출력하는 프로그램이다.
+
+주로 최댓값 또는 최솟값을 판변할 때 주로 사용한다.
