--- a/C언어/03-연산자.md
+++ b/C언어/03-연산자.md
@@ -32,8 +32,7 @@ int main(void)
 
  <pre>대입 연산자는 다음과 같이 하나의 문장에 여러 개를 사용할 수 있다.
  <code>
- a = b = c = 500;
- </code></pre>
+ a = b = c = 500;</code></pre>
  이와 같은 표현은 여러 개의 변수를 모두 같은 값으로 초기화할 때 사용하며, 연산자 우선순위는 오른쪽에서 왼쪽으로 수행된다.
 
  -> c = 500 -> b = c 이므로 b = 500, 따라서 a = 500 이 된다.
