--- a/C언어/05-반복문.md
+++ b/C언어/05-반복문.md
@@ -106,3 +106,56 @@ int main(void)
 while문을 사용하여 1부터 9까지 곱한 값을 출력할 수 있도록 해주었다.
 
 ## do ~ while문
+
+<pre>do ~ while문 구조
+<code>
+초깃값;
+do
+{
+	printf("안녕하세요");
+	증감값;
+}while(조건식);</code></pre>
+do ~ while문도 마찬가지로 조건식이 참일 동안 반복해서 수행한다.
+
+<pre>do ~ while문으로 1부터 입력받은 수까지 누적 합계 출력
+<code>
+#include<stdio.h>
+
+int main(void)
+{
+	int su, cnt = 1, hap = 0;	// 입력, 카운트, 누적합
+
+	printf("어디까지 합을 구할까요 : ");
+	scanf_s("%d", &su);
+
+	do
+	{
+		hap += cnt; 	// hap = hap + cnt
+		printf("%d회 실행 : 누적합은 %d\n", cnt, hap);
+		cnt ++;
+	}while(cnt <= su);
+
+	printf("1부터 %d까지 누적합 : %d\n", su, hap);
+	return 0;
+}</code></pre>
+do ~ while문은 다른 반복문과는 다르게 조건식을 반복문의 맨 마지막에 선언한다.
+
+다른 반복문은 먼저 조건식을 판별하여 참이면 반복문을 수행하고 거짓이면 수행을 멈춘다. 
+
+하지만 do ~ while문은 조건식을 반복문의 맨 마지막에 작성하기 때문에 무조건 한 번은 수행한 다음 계속 수행할 것인지 판별하여 수행한다.
+
+## 분기문
+
+분기문은 프로그램을 수행할 때 지정된 위치로 이동시키는 제어 명령문이다.
+
+분기문은 코드블록 내에서 프로그램의 실행을 종료하거나 다른 명령문 위치로 이동할 때 주로 사용한다.
+
+### break문
+
+break문은 for문, while문, do ~ while문 등의 반복문이나 switch문을 빠져나올 때 사용한다.
+
+## continue문
+
+continue문은 조건문 또는 반복문 안에서 주로 사용한다.
+
+반복문에서 continue문을 만나면 continue문 다음에 나오는 명령문은 모두 무시한 채 반복문의 처음으로 이동한다.
