--- a/C언어/05-반복문.md
+++ b/C언어/05-반복문.md
@@ -154,7 +154,7 @@ do ~ while문은 다른 반복문과는 다르게 조건식을 반복문의 맨 
 
 break문은 for문, while문, do ~ while문 등의 반복문이나 switch문을 빠져나올 때 사용한다.
 
-## continue문
+### continue문
 
 continue문은 조건문 또는 반복문 안에서 주로 사용한다.
 
