--- a/C언어/06-함수.md
+++ b/C언어/06-함수.md
@@ -1,3 +1,141 @@
 # 함수
 
-## 
+## 함수의 개요
+
+함수란 프로그램에서 특정한 작업을 수행하도록 따로 정의해 놓은 독립된 단위를 의미한다.
+
+함수를 사용하면 코드 중복을 줄일 수 있다.
+
+## 라이브러리 함수
+
+라이브러리 함수는 컴파일러를 제작한 회사에서 제공하며, 컴파일된 기계어 코드를 모아둔 파일을 라이브러리라고 한다.
+
+난수 발생 함수, 수학 함수 등이 책에 있다. 하지만 이것보다 더 많은 라이브러리 함수가 존재한다.
+
+## 사용자 정의 함수
+
+사용자 정의 함수는 라이브러리 함수에서 지원하지 않는 명령문을 사용자가 목적에 맞게 직접 만들어서 사용하는 함수이다.
+
+### 사용자 정의 함수의 구성
+사용자 정의 함수는 크게 머리 부분과 본문 부분으로 구성된다.
+
+머리(header) 부분은 함수 자료형, 함수 이름, 매개변수 등으로 이루어지고, 본문(body) 부분은 특정 명령을 실제로 실행하는 명령어들로 이루어진다.
+
+<pre>사용자 정의 함수의 구성 예시
+<code>
+int Add (int num1, int num2)  // 함수의 머리 부분
+{     
+  int sum = 0;
+  sum = num1 + num2;
+  return sum;
+}</code></pre>
+함수의 본문 부분은 코드블록 전체이다.
+
+### 함수의 선언과 호출
+
+<pre>함수의 선언과 호출 예시
+<code>
+int Add (int num1, int num2);   // 함수 선언
+
+int main(void)    // main() 함수 정의
+{
+    '''
+    '''
+    hap = Add(a,b);   // 함수 호출
+    '''
+    '''
+}</code></pre>
+함수를 선언할 때는 ;(세미콜론)을 붙어줘야 한다.
+
+함수 호출 과정의 3단계 과정은 위에 있는 것 처럼 
+함수 선언 -> 함수 정의 -> 함수 호출 단계이다.
+
+2단계 과정은 함수 선언을 제외하고 함수 정의 -> 함수 호출이다.
+이때는 함수 정의 단계에서 본문 부분을 작성해줘야 한다.
+
+### 함수 호출 관계
+사용자 정의 함수를 호출하는 방법은 호출하려는 위치에서 함수 이름을 써주면 된다. 그러면 사용자 정의 함수는 함수 내 명령을 수행한 후 그 결과를 함수를 호출한 곳으로 반환한다.
+
+### 인수와 매개변수
+인수는 함수를 호출할 때 괄호 안에 넣어주는 직접적인 값을 의미한다.
+
+매개변수는 함수에서 인수 값을 받아 저장하는 공간을 의미한다.
+
+인수와 매개변수는 일대일로 매칭된다.
+
+## 인수 전달 방법
+인수는 함수를 호출할 때 사용자 정의 함수에 전달하는 매체로, 함수에서 선언한 매개변수와 일대일로 대응한다.
+
+### 값에 의한 호출
+값에 의한 호출 방식은 함수를 호출하면서 인수의 값 자체를 전달하는 것으로, 호출되는 함수는 인수의 값을 매개변수로 받아들여 명령문을 수행한다.
+
+값에 의한 호출 방식으로 함수를 호출할 때 전달되는 인수는 반드시 매개변수와 자료형이 일치해야 한다.
+
+<pre>값에 의한 호출 방식의 구조
+<code>
+int Cal_val(int su)   // 함수 정의
+{
+  su = su + 5;
+  return su;
+}
+
+int main(void)    // main()함수
+{
+  int num = 100, after;
+  after = Cal_val(num);   // 함수 호출  
+}</code></pre>
+이 코드의 과정은 num 값을 su에 전달한다.
+
+su 값을 100에서 105로 변경한다.
+
+su 값을 after로 반환한다.
+따라서 after 값은 105가 된다.
+
+## 사용자 정의 함수 예제
+
+<pre>함수의 호출 3단계 과정
+<code>
+#include<stdio.h>
+
+int Add(int num1, int num2);			//사용자 함수 선언
+
+int main(void)		//main함수 정의 
+{
+	int a = 10, b = 20, hap = 0;
+
+	hap = Add(a, b);		// 사용자 함수 호출
+
+	printf("결과 > %d과 %d의 덧셈결과 : %d\n", a, b, hap);
+	return 0;
+}
+int Add(int num1, int num2)   // 사용자 함수 정의
+{
+	int result = 0;
+
+	result = num1 + num2;
+	return result;
+}</code></pre>
+
+<pre>함수의 호출 2단계 과정
+<code>
+#include<stdio.h>
+
+int Add(int num1, int num2)			//사용자 함수 정의
+{
+	int result = 0;
+
+	result = num1 + num2;
+	return result;
+}
+int main(void)		//main함수 정의 
+{
+	int a = 10, b = 20, hap = 0;
+
+	hap = Add(a, b);		// 사용자 함수 호출
+
+	printf("결과 > %d과 %d의 덧셈결과 : %d\n", a, b, hap);
+	return 0;
+}</code></pre>
+
+위의 예제를 통해 함수의 호출 3단계와 2단계의 차이를 알 수 있다.
+
