--- a/C언어/11-문자와 문자열.md
+++ b/C언어/11-문자와 문자열.md
@@ -217,7 +217,7 @@ _strrev(s)    // 문자열 s를 알파벳 역순으로 변환
 _strupr_s(s, sizeof(s)) // 문자열 s를 알파벳 대문자로 모두 변환
 _strlwr_s(s, sizeof(s)) // 문자열 s를 알파벳 소문자로 모두 변환
 </code></pre>
-등이 있는데 이 함수들의 예제는 "11.1-문자와 문자열.md" 파일에 쓰겠다.
+등이 있는데 이 함수들의 예제는 "11.1-문자와 문자열.md" 파일에 따로 작성할 것이다.
 
 ## 배열로 문자열 다루기
 문자와 문자열을 처리할 때 배열을 사용하는 방법과 포인터 배열을 사용하는 방법의 차이
