--- a/C언어/01-표준 입출력 함수.md
+++ b/C언어/01-표준 입출력 함수.md
@@ -1,6 +1,6 @@
 # 표준 입출력 함수
 
-## printf() 기본 사용법
+## 1. printf() 기본 사용법
 ### printf()함수는 stdio 헤더파일을 불러와야 사용할 수 있다. 
 ### 기본적인 사용 방법은 printf("반갑습니다"); 라고 작성하면 "반갑습니다" 라는 문장이 출력된다.
 
@@ -64,7 +64,7 @@ int main(void)
 	return 0;                 // 프로그램 종료
 }</code></pre>
 
-## scanf_s() 기본 사용법
+## 2. scanf_s() 기본 사용법
 ### 데이터를 입력 받을 때 사용하며 printf()와 마찬가지로 stdio 헤더파일을 불러와야 사용할 수 있다.
 ### 값을 입력 받기 위해 다음과 같이 선언하여 사용한다. 
 
@@ -113,6 +113,6 @@ int main(void)
 }</code></pre>
 num1 과 num2를 입력 받아 저장하고, hap 이라는 변수에 num1 과 num2를 더한 값을 저장하고 출력했다.
 
-# 문자 코드
+## 3. 문자 코드
 아스키코드를 배웠는데 0은 48, A는 65, a는 97로 표현한다. 
 이것만 기억하면 나머지 숫자와 알파벳의 아스키코드를 알 수 있다.
