--- a/C언어/02-변수와 자료형.md
+++ b/C언어/02-변수와 자료형.md
@@ -1,6 +1,6 @@
 # 변수와 자료형
 
-## 변수의 기초
+## 1. 변수의 기초
  변수는 계속해서 변하는 값으로 프로그램이 실행되는 동안 데이터 값이 변하는 정보를 보유하고 있는 식별자이다.
 
  프로그래머로부터 데이터를 입력받거나 연산을 수행하면 저장할 공간이 필요하다.
@@ -16,7 +16,7 @@
 
 또한, a, b, c처럼 아무 의미 없이 단순한 알파벳을 변수로 사용하기보다, 용도에 맞는 이름으로 선언하는 것이 가장 좋다.
 
-## 자료형
+## 2. 자료형
  자료형은 데이터를 저장하기 위한 공간인 변수를 선언할 때 메모리의 크기를 지정하는 단위를 의미한다.
 
 자료형의 종류에는 정수형, 실수형, 문자형의 세 가지 자료형을 제공한다.
@@ -32,7 +32,7 @@
  따라서 자료형은 변수의 용도에 맞게 선언하여 사용해야한다.
 
 
-## 변수의 사용 
+## 3. 변수의 사용 
  변수 앞에 자료형을 선언하여 그 변수가 어떤  데이터값을 저장할 것인지 컴파일러에게 미리 알리는 것을 "변수 선언"이라고 한다.
 
 <pre>변수 선언
@@ -117,7 +117,7 @@ int main(void)
 
 이렇게 캐스트 자료형을 사용하여 자료형을 변환하는 것을 "강제 자료형 변환" 또는 "명시적 자료형 변환"이라고 한다.
 
-## 상수
+## 4. 상수
 상수에서는 기호 상수에 대해 작성했다.
 
 기호 상수는 숫자 대신 특정 문자를 사용하는 것을 말하는데, 보통 상수에 이름을 붙여야 할 때 사용한다.
