--- a/C언어/03-연산자.md
+++ b/C언어/03-연산자.md
@@ -1,6 +1,6 @@
 # 연산자
 
-## 산술 연산자와 대입 연산자
+## 1. 산술 연산자와 대입 연산자
  ### 산술 연산자
   가장 기본적인 계산을 위한 것으로 덧셈(+), 뺄셈(-), 곱셈(*), 나눗셈(/)과 나머지(%) 연산자를 사용한다.
 
@@ -66,7 +66,7 @@ int main(void)
  }</code></pre>
  이렇게 사용할 수 있다. 복합 대입 연산자는 다른 연산자에 비해 우선순위가 낮으므로 다른 연산자를 먼저 처리하고 난 다음에 수행된다.
 
-## 증감 연산자와 관계 연산자
+## 2. 증감 연산자와 관계 연산자
 ### 증감 연산자
  변수의 값을 1 증가시킬 때 ++를 사용하고, 1 감소시킬 때 --를 사용한다.
 
@@ -135,7 +135,7 @@ int main(void)
 	return 0;
 }</code></pre>
 
-## 논리 연산자와 조건 연산자
+## 3. 논리 연산자와 조건 연산자
 ### 논리 연산자
  연산식에서 2개 또는 여러 개의 피연산자를 대상으로 AND(&&), OR(||), NOT(!)이 논리 연산을 하여 참이면 1, 거짓이면 0을 결과 값으로 출력한다.
 
