--- a/C언어/05-반복문.md
+++ b/C언어/05-반복문.md
@@ -9,7 +9,7 @@
 
 반복문에는 for문, while문, do ~ while문이 있다.
 
-## for문
+## 1. for문
 
 <pre>for문의 구조
 <code>
@@ -53,7 +53,7 @@ int main(void)
 }</code></pre>
 반복해서 실행할 문장을 {}(중괄호)를 사용하여 코드 블록을 만들어 주었다.
 
-## while문
+## 2. while문
 
 <pre>while문의 구조
 <code>
@@ -105,7 +105,7 @@ int main(void)
 }</code></pre>
 while문을 사용하여 1부터 9까지 곱한 값을 출력할 수 있도록 해주었다.
 
-## do ~ while문
+## 3. do ~ while문
 
 <pre>do ~ while문 구조
 <code>
@@ -144,7 +144,7 @@ do ~ while문은 다른 반복문과는 다르게 조건식을 반복문의 맨 
 
 하지만 do ~ while문은 조건식을 반복문의 맨 마지막에 작성하기 때문에 무조건 한 번은 수행한 다음 계속 수행할 것인지 판별하여 수행한다.
 
-## 분기문
+## 4. 분기문
 
 분기문은 프로그램을 수행할 때 지정된 위치로 이동시키는 제어 명령문이다.
 
