--- a/C언어/06-함수.md
+++ b/C언어/06-함수.md
@@ -1,18 +1,18 @@
 # 함수
 
-## 함수의 개요
+## 1. 함수의 개요
 
 함수란 프로그램에서 특정한 작업을 수행하도록 따로 정의해 놓은 독립된 단위를 의미한다.
 
 함수를 사용하면 코드 중복을 줄일 수 있다.
 
-## 라이브러리 함수
+## 2. 라이브러리 함수
 
 라이브러리 함수는 컴파일러를 제작한 회사에서 제공하며, 컴파일된 기계어 코드를 모아둔 파일을 라이브러리라고 한다.
 
 난수 발생 함수, 수학 함수 등이 책에 있다. 하지만 이것보다 더 많은 라이브러리 함수가 존재한다.
 
-## 사용자 정의 함수
+## 3. 사용자 정의 함수
 
 사용자 정의 함수는 라이브러리 함수에서 지원하지 않는 명령문을 사용자가 목적에 맞게 직접 만들어서 사용하는 함수이다.
 
@@ -63,7 +63,7 @@ int main(void)    // main() 함수 정의
 
 인수와 매개변수는 일대일로 매칭된다.
 
-## 인수 전달 방법
+## 4. 인수 전달 방법
 인수는 함수를 호출할 때 사용자 정의 함수에 전달하는 매체로, 함수에서 선언한 매개변수와 일대일로 대응한다.
 
 ### 값에 의한 호출
@@ -91,7 +91,7 @@ su 값을 100에서 105로 변경한다.
 su 값을 after로 반환한다.
 따라서 after 값은 105가 된다.
 
-## 사용자 정의 함수 예제
+## 5. 사용자 정의 함수 예제
 
 <pre>함수의 호출 3단계 과정
 <code>
