--- a/C언어/07-함수와 변수.md
+++ b/C언어/07-함수와 변수.md
@@ -1,6 +1,6 @@
 # 함수와 변수
 
-## 지역 변수
+## 1. 지역 변수
 지역 변수는 특정 함수 또는 코드 블록 안에서 선언하여 사용하는 것이로, 해당 함수나 코드 블록 구간 안에서만 접근하여 사용할 수 있다. 
 
 선언한 함수 또는 코드 블록 구간을 벗어나서 사용하면 문법 오류가 발생한다.
@@ -30,7 +30,7 @@ int main(void)
 
 지역 변수는 정해진 코드 블록 구간 안에서만 사용한다는 특징이 있기 때문에 동일한 이름의 지역 변수를 다른 함수의 코드 블록 구간 안에서 선언하여 사용해도 컴파일 오류가 발상해지 않는다.
 
-## 전역 변수
+## 2. 전역 변수
 전역 변수는 함수 외부에서 선언하여 프로그램 소스 파일 전체에서 사용하는 변수이다.
 
 전역 변수는 main()함수 또는 사용자 정의 함수에서도 접근하여 사용할 수 있다.
@@ -77,3 +77,30 @@ int main(void)
   return 0;
 }</code></pre>
 출력 결과는 8이 출력된다. 따라서 지역 변수가 전역 변수보다 우선시 되어 지역 변수가 전역 변수를 가리게 된다.
+
+## 3.동적 변수와 정적 변수
+### 동적 변수
+지역 변수를 선언하면 코드 블록의 마지막 구간에서 소멸하게 된다.
+
+이와 같은 지역 변수를 동적 변수 또는 자동 변수라고 한다.
+
+지역 변수를 동적 변수라고 하는 이유는 변수를 선언한 위치에서 생성되고 블록이 끝나는 구간에서 자동으로 소멸되기 때문이다.
+
+동적 변수를 사용하려면 변수명 앞에 키워드 auto를 붙인다.
+
+지금까지 실습한 지역 변수를 보면 auto 키워드를 선언하지 않아도 자동으로 소멸됐다. 
+
+그 이유는 변수 앞에 auto 키워드를 생략해도 동적 변수로 기본 적용되기 때문이다.
+
+### 정적 변수
+정적 변수는 전역 변수와 마찬가지로 프로그램이 실행될 때 메모리에 생성되고, 프로그램이 종료되면 메모리 공간을 모두 비운다.
+
+정적 변수가 동적 변수와 다른 점은 변수가 선언된 함수 또는 소스 코드 블록 구간을 벗어나서도 사용할 수 있다는 것이다.
+
+동적 변수는 해당 범위를 벗어나면 자동으로 제거되지만 정적 변수는 변수가 선언된 범위를 벗어나도 자동으로 삭제되지 않는다.
+
+정적 변수는 지역 변수와 전역 변수 모두에 선언할 수 있다.
+
+변수를 정적 변수로 생성하려면 변수명 앞에 static키워드를 선언하면 된다.
+
+정적 변수를 선언할 때 초기화 하지 않으면 자동으로 0으로 초기화 된다. 
