--- a/C언어/08-배열.md
+++ b/C언어/08-배열.md
@@ -1,6 +1,6 @@
 # 배열
 
-## 배열의 개요
+## 1. 배열의 개요
 배열은 같은 종류의 자료형을 선언하기 위해 구성된 데이터의 집합이다.
 
 일반 변수는 하나의 값을 대입하여 처리하기 위해 사용하지만 배열은 많은 값을 한꺼번에 처리하기 위해 사용한다.
@@ -9,7 +9,7 @@
 
 배열은 데이터마다 이름을 부여하지 않고 전체 그룹에 대한 이름을 부여하고 0부터 시작하는 숫자로 구성된 인덱스로 데이터에 접근한다.
 
-## 배열의 선언과 초기화
+## 2. 배열의 선언과 초기화
 배열 안에 들어있는 각각의 데이터는 인덱스를 통해 접근할 수 있다.
 <pre>배열 선언과 메모리 저장
 <code>
@@ -45,7 +45,7 @@ int score[3] = {75, 96} // 비어있는 인덱스는 0으로 초기화
 int score[] = {75, 96, 88}  // 배열의 크기는 요소의 개수만큼 자동 설정</code></pre>
 배열의 요소는 {}(중괄호) 안에 작성하고 ,(콤마)로 구분한다.
 
-## 배열의 활용
+## 3. 배열의 활용
 배열은 반복문에서 많이 사용한다.
 
 <pre>for문으로 배열 요소 출력
@@ -115,7 +115,7 @@ int main(void)
 
 배열을 참조할 때 주소 참조 연산자인 &는 붙이지 않는다. 그 이유는 배열의 이름 자체에 시작 주소를 저장하고 있기 때문이다.
 
-## 배열을 활용한 탐색
+## 4. 배열을 활용한 탐색
 순차 탐색은 배열의 요소의 데이터값을 처음부터 순서대로 하나씩 꺼내서 원하는 것을 찾을 때까지 탐색하는 방법이다.
 
 순차 탐색은 비교적 간단하지만 배열의 모든 요소를 처음부터 끝까지 탐색하기 때문에 다소 시간이 소요된다는 단점이 있다.
@@ -151,7 +151,7 @@ int main(void)
 }</code></pre>
 탐색할 값을 변수 key에 저장하고 if문을 사용하여 배열의 요소와 key와 같은 값이 있으면 그 값을 출력하고, 없으면 프로그램을 종료한다.
 
-## 다차원 배열
+## 5. 다차원 배열
 배열의 크기를 지정하는 부분이 2개 이상일 경우 다차원 배열이라고 한다.
 
 1차원 배열은 arr[3]과 같이 배열의 크기를 나타내는 부분이 1개이고, 2차원 배열은 arr[3][5]와 같이 2개이며 "배열명[행][열]" 형식으로 선언한다. 3차원 배열 등이 있다.
