--- a/C언어/09-포인터 기초.md
+++ b/C언어/09-포인터 기초.md
@@ -1,6 +1,6 @@
 # 포인터 기초
 
-## 포인터의 개요
+## 1. 포인터의 개요
 포인터는 데이터나 프로그램이 저장되어 있는 메모리 주소를 지정하는 변수를 의미한다.
 
 변수를 선언하면 컴파일러와 운영체제가 알아서 메모리 주조를 저장했다가 호출하면 가져오기 때문에 변수를 선언할 때 메모리 주소를 일일이 지정해 주지 않아도 된다.
@@ -40,7 +40,7 @@ int main(void)
 
 메모리에 저장되어 있는 변수값의 주소를 반환하려면 주소 참조 연산자인 &를 변수명 앞에 선언하여 출력해야 한다.
 
-## 포인터 사용
+## 2. 포인터 사용
 
 ### 포인터 선언과 초기화
 <pre>포인터 선언
@@ -98,7 +98,7 @@ p와 *p에 따라 출력 결과값이 달라지는 것을 볼 수 있다.
 
 p는 주소값을 출력하고, *p는 그 주소에 있는 데이터값을 출력한다.
 
-## 포인터 연산
+## 3. 포인터 연산
 
 ### 포인터 타입별 증감 연산
 포인터 증감 연산은 일반 연산처럼 증감값 1을 더하거나 빼라는 것이 아니다.
@@ -125,7 +125,7 @@ int *p 라고 선언하고, *p++ 또는 *p--는 4씩 증가 또는 감소한다.
 
 ++*p 는 포인터 p가 가리키는 주소의 데이터값을 1 증가시킨다음 그 데이터값을 참조한다.
 
-## 포인터와 배열
+## 4. 포인터와 배열
 포인터와 배열은 매우 밀접한 관계를 가지고 있다.
 
 포인터와 배열의 관계에서 배열 이름 자체는 포인터와 동일한 기능을 수행한다. (주소를 저장하고 있다.)
