--- a/C언어/10-포인터 활용.md
+++ b/C언어/10-포인터 활용.md
@@ -1,6 +1,6 @@
 # 포인터 활용
 
-## 포인터와 문자열
+## 1. 포인터와 문자열
 문자열을 처리하기위해 배열이나 포인터를 사용해야 한다.
 
 문자열 상수를 문자형 배열로 처리하기 위해서는 문자열 끝에 NULL문자('\0')가 자동으로 포함된다는 것을 고려하여 실제 문자열 길이 + 1만큼 크게 지정해야 한다.
@@ -32,7 +32,7 @@ int main(void)
 }</code></pre>
 배열과 포인터를 사용하여 문자열을 처리하는 경우를 비교해 볼 수 있다.
 
-## 포인터 배열
+## 2. 포인터 배열
 포인터 배열을 선언한다는 것은 포인터를 배열 요소로 사용한다는 의미이다.
 
 <pre>포인터 배열 사용 형식
@@ -53,7 +53,7 @@ int main(void)
 
 레그드 배열은 포인터 배열을 이용하여 선언한다.
 
-## 배열 포인터
+## 3. 배열 포인터
 배열 포인터를 간단하게 표현하면 배열을 가리키는 포인터라고 한다.
 
 <pre>배열 포인터의 사용 형식
