--- a/C언어/11.1-문자와 문자열.md
+++ b/C언어/11.1-문자와 문자열.md
@@ -29,6 +29,7 @@ _strrev(s)    // 문자열 s를 알파벳 역순으로 변환
 _strupr_s(s, sizeof(s)) // 문자열 s를 알파벳 대문자로 모두 변환
 _strlwr_s(s, sizeof(s)) // 문자열 s를 알파벳 소문자로 모두 변환
 </code></pre>
+문자열 라이브러리 함수를 사용하려면 <string.h> 헤더 파일을 선언해 줘야한다.
 
 <pre>문자열 길이 계산과 문자열 복사
 <code>
