--- a/C언어/13-스트림과 파일 입출력.md
+++ b/C언어/13-스트림과 파일 입출력.md
@@ -1,6 +1,6 @@
 # 스트림과 파일 입출력
 
-## 스트림
+## 1. 스트림
 스트림(stream)이란 순서가 있는 데이터를 입력받거나 출력할 때 해당 장치로부터 데이터가 한쪽으로 흘러가는 것을 의미한다.
 
 스트림을 사용하면 장치별로 독립해서 입출력할 수 있어 모니터로 출력한 데이터를 파일이나 프린터로 출력할 때도 같은 방법으로 처리할 수 있다.
@@ -33,7 +33,7 @@ stdout    |    모니터     |    표준 출력     | printf()
 stderr    |    모니터     |  표준 에러 출력  | 오류 출력 시스템</code></pre>
 이러한 스트림이 존재하고, 자동으로 생성되고 소멸된다는 것만 알고 넘어가도록 한다.
 
-## 파일 입출력 
+## 2. 파일 입출력 
 
 ### 파일 포인터와 FILE형 구조체
 #### 파일 포인터
