--- a/C언어/14-동적 메모리.md
+++ b/C언어/14-동적 메모리.md
@@ -1,6 +1,6 @@
 # 동적 메모리
 
-## 동적 메모리
+## 1. 동적 메모리
 정적 메모리 할당은 프로그램이 시작되기 전에 정해진 크기의 메모리를 배열과 같은 방법으로 미리 할당 받는 방식이다.
 
 동적 메모리 할당은 프로그램을 실행하던 도중에 메모리가 필요하면 동적으로 할당받아서 사용한 후 반납하는 방식이다.
