--- a/C언어/15-선행처리기.md
+++ b/C언어/15-선행처리기.md
@@ -1,6 +1,6 @@
 # 선행처리기
 
-## 선행처리기
+## 1. 선행처리기
 선행처리기란 컴파일러가 소스 프로그램을 기계어 코드로 번역하기 전에 일련의 작업을 수행하는 것이다.
 
 선행처리기를 사용하는 목적은 프로그램을 쉽게 수정하고 이식성을 높이기 위함이다.
@@ -61,7 +61,7 @@ int main(void)
 
 소스코드와 동일한 위치에 존재하는 헤더 파일을 불러올 때는 큰따옴표로 헤더 파일을 묶어 #include "myst.h"와 같이 해야한다.
 
-## 매크로
+## 2. 매크로
 매크로란 키보드나 마우스 조작 등의 단순 반복 기능을 한 번의 동작으로 자동 실행되도록 하는 기능을 말한다.
 
 매크로는 자주 사용하는 여러 개의 명령어를 반복해서 사용할 때 유용하다.
