--- a/C언어/08-배열.md
+++ b/C언어/08-배열.md
@@ -43,6 +43,10 @@ int score[3] = {75, 96, 88} // 올바른 선언
 int score[3] = {75, 96, 88, 95} // 에러 발생
 int score[3] = {75, 96} // 비어있는 인덱스는 0으로 초기화
 int score[] = {75, 96, 88}  // 배열의 크기는 요소의 개수만큼 자동 설정</code></pre>
+에러가 발생한 이유는 배열의 크기를 3이라고 선언했는데, 배열의 요소에는 4개의 값이 들어있기 때문이다.
+
+배열의 크기가 3이고, 배열의 요소가 2개일 때, 3번 째 값은 0으로 자동 초기화된다.
+
 배열의 요소는 {}(중괄호) 안에 작성하고 ,(콤마)로 구분한다.
 
 ## 3. 배열의 활용
@@ -181,7 +185,7 @@ int data[3][5] = {
                   {22,24,26,28,30}};</code></pre>
 위와 같은 방법으로 작성한다. 이렇게 작성하면 가독성이 훨씬 좋다.
 
-<pre>2차원 배열 사용
+<pre>2차원 배열 사용 예제
 <code>
 #include<stdio.h>
 #define R 3			//환자수에 대한 배열 크기
