--- a/C언어/08-배열.md
+++ b/C언어/08-배열.md
@@ -65,7 +65,8 @@ int main(void)
 		printf("score[%d] = %d\n", cnt, score[cnt]);
 
 	return 0;
-}</code></pre>
+}
+</code></pre>
 배열을 선언과 초기화를 동시에 하고 for문을 사용하여 배열의 요소를 차례대로 출력하는 프로그램이다.
 
 ### 배열의 요소 개수 구하기
