--- a/C언어/08-배열.md
+++ b/C언어/08-배열.md
@@ -54,7 +54,7 @@ int score[] = {75, 96, 88}  // 배열의 크기는 요소의 개수만큼 자동
 
 <pre>for문으로 배열 요소 출력
 <code>
-#include<stdio.h>
+#include
 
 int main(void)
 {
