--- a/C언어/08-배열.md
+++ b/C언어/08-배열.md
@@ -52,9 +52,10 @@ int score[] = {75, 96, 88}  // 배열의 크기는 요소의 개수만큼 자동
 ## 3. 배열의 활용
 배열은 반복문에서 많이 사용한다.
 
-<pre>for문으로 배열 요소 출력
-<code>
-#include<<stdio.h>>
+for문으로 배열 요소 출력
+
+```c
+#include<stdio.h>
 
 int main(void)
 {
@@ -66,7 +67,8 @@ int main(void)
 
 	return 0;
 }
-</code></pre>
+```
+
 배열을 선언과 초기화를 동시에 하고 for문을 사용하여 배열의 요소를 차례대로 출력하는 프로그램이다.
 
 ### 배열의 요소 개수 구하기
