Update 01-표준 입출력 함수.md

--- a/C언어/01-표준 입출력 함수.md
+++ b/C언어/01-표준 입출력 함수.md
@@ -95,8 +95,8 @@ int main(void)
 }</code></pre>
 scnaf_s()를 사용하여 num이라는 변수를 저장하고 출력했다.
 
-<pre>입력받은 정수 데이터 2개로 덧셈 연산을 하는 프로그램
-<code>
+입력받은 정수 데이터 2개로 덧셈 연산을 하는 프로그램
+```c
 #include<stdio.h>
 int main(void)
 {
@@ -110,7 +110,7 @@ int main(void)
   hap = num1 + num2;          // 덧셈 연산
   printf("덧셈 결과 %d + %d = %d", num1, num2, hap);
   return 0;
-}</code></pre>
+}```
 num1 과 num2를 입력 받아 저장하고, hap 이라는 변수에 num1 과 num2를 더한 값을 저장하고 출력했다.
 
 ## 3. 문자 코드
