--- a/C언어/01-표준 입출력 함수.md
+++ b/C언어/01-표준 입출력 함수.md
@@ -82,8 +82,8 @@ int main(void)
 ### * 배열을 사용한 문자열 입력 
 <pre><code> char 배열명[]; scanf_s("표준 입력 형식 지정자", 배열명, sizeof(배열명));</code></pre> 
 
-<pre>정수 데이터 1개를 입력 받아 출력
-<code>
+정수 데이터 1개를 입력 받아 출력
+```c
 #include<stdio.h>
 int main(void)
 {
@@ -92,7 +92,7 @@ int main(void)
   scanf_s("%d", &num);     //입력 받은 값을 메모리 주소에 저장
   printf("입력 받은 값 출력 : %d", num);    
   return 0;
-}</code></pre>
+}```
 scnaf_s()를 사용하여 num이라는 변수를 저장하고 출력했다.
 
 입력받은 정수 데이터 2개로 덧셈 연산을 하는 프로그램
