Update 01-표준 입출력 함수.md

--- a/C언어/01-표준 입출력 함수.md
+++ b/C언어/01-표준 입출력 함수.md
@@ -4,8 +4,7 @@
 ### printf()함수는 stdio 헤더파일을 불러와야 사용할 수 있다. 
 ### 기본적인 사용 방법은 printf("반갑습니다"); 라고 작성하면 "반갑습니다" 라는 문장이 출력된다.
 
-<pre>printf()로 문자열 출력
-<code>
+```c
 #include<stdio.h>
 int main(void)
 {
@@ -14,33 +13,39 @@ int main(void)
   printf("456789\n");      
   printf("123\n456789"); //문장 중간에 강제 개행 문자 사용
   return 0;              //프로그램 종료
-}</code></pre>
+}
+```
+printf()로 문자열 출력
+
 강제 개행 문자(\n)를 어디에 사용하냐에 따라 출력 결과값이 다르게 나온다.
 
-<pre>숫자를 문자열로 출력
-<code>
+```c
 #include<stdio.h>
 int main(void)
 {
   printf("123+456789\n"); //숫자와 덧셈 연산자 사용
   return 0;
-}</code></pre>
+}
+```
+숫자를 문자열로 출력
+
 출력 함수의 큰따옴표 안에 선언 되었기 때문에 숫자가 아닌 문자열로 취급되어 출력된다.
 
-<pre>출력 형식 지정자 사용
-<code>
+```c
 #include<stdio.h>
 int main(void)
 {
   printf("%d %d\n", 123, 456789); //출력 형식 지정자 선언
   return 0;
-}</code></pre>
+}
+```
+출력 형식 지정자 사용
+
 출력하고자 하는 숫자의 개수와 일대일로 대응시켜야 한다. 
 
 %d는 정수형을 출력할 때 사용하며, 실수형은 %f, 문자는 %c, 문자열 %s등 다양하게 있다.
 
-<pre>실수형 데이터의 자릿수를 지정하여 출력
-<code>
+```c
 #include <stdio.h>
 int main(void)
 {                          
@@ -62,7 +67,9 @@ int main(void)
 	printf("｜%010.3f｜", 358.123456);           // 전체 10개의 자리 확보, 소수 셋째 자리까지 출력, 빈칸 0으로 채움, 숫자는 오른족 정렬
 	printf(" 전체 10자리, 빈칸은 0으로 채움, 소수 셋째 자리까지 출력\n");      // 강제 개행 문자 사용
 	return 0;                 // 프로그램 종료
-}</code></pre>
+}
+```
+실수형 데이터의 자릿수를 지정하여 출력
 
 ## 2. scanf_s() 기본 사용법
 ### 데이터를 입력 받을 때 사용하며 printf()와 마찬가지로 stdio 헤더파일을 불러와야 사용할 수 있다.
@@ -82,7 +89,6 @@ int main(void)
 ### * 배열을 사용한 문자열 입력 
 <pre><code> char 배열명[]; scanf_s("표준 입력 형식 지정자", 배열명, sizeof(배열명));</code></pre> 
 
-정수 데이터 1개를 입력 받아 출력
 ```c
 #include<stdio.h>
 int main(void)
@@ -93,9 +99,10 @@ int main(void)
   printf("입력 받은 값 출력 : %d", num);    
   return 0;
 }```
+정수 데이터 1개를 입력 받아 출력
+
 scnaf_s()를 사용하여 num이라는 변수를 저장하고 출력했다.
 
-입력받은 정수 데이터 2개로 덧셈 연산을 하는 프로그램
 ```c
 #include<stdio.h>
 int main(void)
@@ -111,6 +118,8 @@ int main(void)
   printf("덧셈 결과 %d + %d = %d", num1, num2, hap);
   return 0;
 }```
+입력받은 정수 데이터 2개로 덧셈 연산을 하는 프로그램
+
 num1 과 num2를 입력 받아 저장하고, hap 이라는 변수에 num1 과 num2를 더한 값을 저장하고 출력했다.
 
 ## 3. 문자 코드
