--- a/C언어/05-반복문.md
+++ b/C언어/05-반복문.md
@@ -2,7 +2,8 @@
 
 반복문이란 제시한 조건이 참일 동안 반복해서 수행하는 명령문을 의미한다. 
 
-예를 들어 "안녕하세요"를 100번 출력할 때 반복문을 사용하지 않으면 똑같은 문장을 100번 코딩해야 한다
+예를 들어 "안녕하세요"를 100번 출력할 때 반복문을 사용하지 않으면 똑같은 문장을 100번 코딩해야 한다.
+
 프로그램의 유지, 보수 차원에서 효율성이 떨어지기 때문에 반복문을 사용한다.
 
 반복문은 여러번 코딩하는 중복성을 제거하여 소스코드를 간결하게 만들 수 있다.
@@ -19,8 +20,7 @@ for (초깃값; 조건식; 증감값)
 }</code></pre>
 같은 내용으로 작성한다. 
 
-<pre>for문으로 10회 반복 출력
-<code>
+```c
 #include<stdio.h>
 
 int main(void)
@@ -32,11 +32,13 @@ int main(void)
 		printf("%d회 출력: 안녕하세요.\n", count + 1);
 	}
 	return 0;
-}</code></pre>
+}
+```
+for문으로 10회 반복 출력
+
 반복문의 동작 원리는 count = 0 에서 1씩 증가시키면서 실행하고, 조건식 count < 10일 동안에 반복하며 실행한다.
 
-<pre>for문으로 1부터 10까지 누적 합계 출력
-<code>
+```c
 #include<stdio.h>
 
 int main(void)
@@ -50,7 +52,10 @@ int main(void)
 	}
 	printf("1 + 2 + ~ + 9 + 10 = %d\n", hap); 
 	return 0;
-}</code></pre>
+}
+```
+for문으로 1부터 10까지 누적 합계 출력
+
 반복해서 실행할 문장을 {}(중괄호)를 사용하여 코드 블록을 만들어 주었다.
 
 ## 2. while문
@@ -67,8 +72,7 @@ while문은 조건식이 참이면 문장을 반복해서 수행하지만 거짓
 
 for문과 마찬가지로 증감값으로 반복 횟수를 카운트하면서 조건식이 참일 동안 명령문을 반복해서 수행한다.
 
-<pre>while문으로 반복 출력
-<code>
+```c
 #include<stdio.h>
 
 int main(void)
@@ -81,11 +85,13 @@ int main(void)
 		printf(" Hello World\n");
 		i++;    // 증감값
 	}
-}</code></pre>
+}
+```
+while문으로 반복 출력
+
 for문과 마찬가지로 i =0 에서 시작하여, 1씩 증가하고 i <= 10일 동안에 코드 블록 내 문장들이 반복해서 실행된다.
 
-<pre>while문으로 구구단 입력받고 출력
-<code>
+```c
 #include<stdio.h>
 
 int main(void)
@@ -102,7 +108,10 @@ int main(void)
 		i++;
 	}
 	return 0;
-}</code></pre>
+}
+```
+while문으로 구구단 입력받고 출력
+
 while문을 사용하여 1부터 9까지 곱한 값을 출력할 수 있도록 해주었다.
 
 ## 3. do ~ while문
@@ -117,8 +126,7 @@ do
 }while(조건식);</code></pre>
 do ~ while문도 마찬가지로 조건식이 참일 동안 반복해서 수행한다.
 
-<pre>do ~ while문으로 1부터 입력받은 수까지 누적 합계 출력
-<code>
+```c
 #include<stdio.h>
 
 int main(void)
@@ -137,7 +145,10 @@ int main(void)
 
 	printf("1부터 %d까지 누적합 : %d\n", su, hap);
 	return 0;
-}</code></pre>
+}
+```
+do ~ while문으로 1부터 입력받은 수까지 누적 합계 출력
+
 do ~ while문은 다른 반복문과는 다르게 조건식을 반복문의 맨 마지막에 선언한다.
 
 다른 반복문은 먼저 조건식을 판별하여 참이면 반복문을 수행하고 거짓이면 수행을 멈춘다. 
