--- a/C언어/06-함수.md
+++ b/C언어/06-함수.md
@@ -93,8 +93,7 @@ su 값을 after로 반환한다.
 
 ## 5. 사용자 정의 함수 예제
 
-<pre>함수의 호출 3단계 과정
-<code>
+```c
 #include<stdio.h>
 
 int Add(int num1, int num2);			//사용자 함수 선언
@@ -114,10 +113,10 @@ int Add(int num1, int num2)   // 사용자 함수 정의
 
 	result = num1 + num2;
 	return result;
-}</code></pre>
+}
+함수의 호출 3단계 과정
 
-<pre>함수의 호출 2단계 과정
-<code>
+```c
 #include<stdio.h>
 
 int Add(int num1, int num2)			//사용자 함수 정의
@@ -135,7 +134,9 @@ int main(void)		//main함수 정의
 
 	printf("결과 > %d과 %d의 덧셈결과 : %d\n", a, b, hap);
 	return 0;
-}</code></pre>
+}
+```
+함수의 호출 2단계 과정
 
 위의 예제를 통해 함수의 호출 3단계와 2단계의 차이를 알 수 있다.
 
