--- a/C언어/07-함수와 변수.md
+++ b/C언어/07-함수와 변수.md
@@ -35,8 +35,7 @@ int main(void)
 
 전역 변수는 main()함수 또는 사용자 정의 함수에서도 접근하여 사용할 수 있다.
 
-<pre>전역 변수의 선언 위치와 사용 방법
-<code>
+```c
 #include<stdio.h>
 int star;   // 전역 변수 선언
 
@@ -52,7 +51,10 @@ int Add(int num1, num2)
 {
   star = 20;    // 전역 변수 사용
   '''
-}</code></pre>
+}
+```
+전역 변수의 선언 위치와 사용 방법
+
 전역 변수를 선언하는 위치는 함수 외부이다.
 
 함수 외부에서 변수를 선언한다는 의미는 특정 블록 구간 내에서만 사용하지 않고 다른 함수들과 함께 공용으로 사용할 수 있다. 
@@ -64,8 +66,8 @@ int Add(int num1, num2)
 
 ### 같은 이름으로 선언한 전역 변수와 지역 변수
 하나의 프로그램 내에서 전역 변수와 지역 변수의 이름을 동일하게 선언할 경우 지역 변수가 참조되어 실행된다.
-<pre>같은 이름으로 선언한 지역 변수와 전역 변수
-<code>
+
+```c
 #include<stdio.h>
 
 int star = 7;   // 전역 변수 선언
@@ -75,7 +77,10 @@ int main(void)
   int star = 8; // 지역 변수 선언
   printf("%d", star);
   return 0;
-}</code></pre>
+}
+```
+같은 이름으로 선언한 지역 변수와 전역 변수
+
 출력 결과는 8이 출력된다. 따라서 지역 변수가 전역 변수보다 우선시 되어 지역 변수가 전역 변수를 가리게 된다.
 
 ## 3.동적 변수와 정적 변수
