--- a/C언어/10-포인터 활용.md
+++ b/C언어/10-포인터 활용.md
@@ -5,8 +5,7 @@
 
 문자열 상수를 문자형 배열로 처리하기 위해서는 문자열 끝에 NULL문자('\0')가 자동으로 포함된다는 것을 고려하여 실제 문자열 길이 + 1만큼 크게 지정해야 한다.
 
-<pre>배열과 포인터로 문자열 처리
-<code>
+```c
 #include<stdio.h>
 
 int main(void)
@@ -29,7 +28,10 @@ int main(void)
 		printf("*(ps + %d) : %c\n", cnt, *(ps + cnt));
 	}
 	return 0;
-}</code></pre>
+}
+```
+배열과 포인터로 문자열 처리
+
 배열과 포인터를 사용하여 문자열을 처리하는 경우를 비교해 볼 수 있다.
 
 ## 2. 포인터 배열
