--- a/C언어/11-문자와 문자열.md
+++ b/C언어/11-문자와 문자열.md
@@ -48,8 +48,7 @@ int a;
 a = getchar();  // 키보드로 문자 하나를 입력 받음
 putchar(a);   // 입력받은 문자를 화면에 출력</code></pre>
 
-<pre>getchar()와 putchar() 함수 사용
-<code>
+```c
 #include<stdio.h>
 int main(void)
 {
@@ -61,8 +60,9 @@ int main(void)
 	printf("문자 출력 :");
 	putchar(munja);
 	return 0;
-}</code></pre>
-putchar()함수와 getchar()함수 예제를 해보았다.
+}
+```
+getchar()와 putchar() 함수 사용
 
 ### 직접형 표준 입출력 함수
 버퍼 메모리를 사용하지 않고 직접 입출력 하는 함수이다.
@@ -83,8 +83,7 @@ int munja;
 munja = _getch();   //키보드로 문자 하나를 입력받아 변수에 저장
 _putch(munja);    // 입력받은 문자를 화면에 출력 </code></pre>
 
-<pre>직접형 함수 사용
-<code>
+```c
 #include<stdio.h>
 #include<conio.h>		// _getch()와 _putch() 함수 사용하기 위한 선언
 
@@ -106,7 +105,10 @@ int main(void)
 	printf("\n문자 출력 : ");
 	_putch(munja);							// 직접형 단일 문자 출력 함수 
 	return 0;
-}</code></pre>
+}
+```
+직접형 함수 사용
+
 에코 기능이 있고 없고에 따라 출력이 어떻게 달라지는지 볼 수 있다.
 
 ### 문자 라이브러리 함수
@@ -114,8 +116,7 @@ int main(void)
 
 문자 검사 함수의 종류는 매우 많은데 몇개만 예제를 통해 봐보자.
 
-<pre>알파벳의 대소문자 검사
-<code>
+```c
 #include<stdio.h>
 #include<ctype.h>
 
@@ -136,7 +137,10 @@ int main(void)
 	else
 		printf("입력한 %c는 알파벳이 아닙니다.\n", op);
 	return 0;
-} </code></pre>
+}
+```
+알파벳의 대소문자 검사
+
 isalpha()함수를 사용하여 입력한 문자가 알파벳인지 확인하였다. 그리고 isupper()함수를 사용하여 알파벳이 대문자인지 검사하고, 그 결과를 if문을 사용하여 출력하였다.
 
 <pre>문자 변환 함수의 종류
@@ -159,8 +163,7 @@ char name[10];
 gets_s(name, sizeof(name));   // 키보드로 10바이트의 문자열 한 줄을 입력 받음
 puts(name);     // 입력받은 문자열을 화면에 출력</code></pre>
 
-<pre>gets_s()로 공백 포함 출력, scnaf_s()로 공백 전까지 출력
-<code>
+```c
 #include<stdio.h>
 
 int main(void)
@@ -183,7 +186,10 @@ int main(void)
 	puts(dept);
 	return 0;
 
-}</code></pre>
+}
+```
+gets_s()로 공백 포함 출력, scnaf_s()로 공백 전까지 출력
+
 get_s()함수를 사용하여 입력한 문자열은 공백까지 포함해서 모두 출력하였다. 
 
 하지만 scnaf_s()함수를 사용하여 입력한 문자열은 첫 번째 공백 전 문자열까지만 출력되었다.
@@ -241,8 +247,7 @@ char s[4][7] = {"spring", "summer", "flaa", "winter"}; </code></pre>
 <code>
 char *s[4] = {"spring", "summer", "fall", "winter"}; </code></pre>
 
-<pre>2차원 배열로 문자열 처리
-<code>
+```c
 #include<stdio.h>
 
 int main(void)
@@ -262,5 +267,8 @@ int main(void)
 		printf("%02d번째 계절 : %s\n", cnt + 1, s[cnt]);
 	}
 	return 0;
-}</code></pre>
+}
+```
+2차원 배열로 문자열 처리
+
 문자열을 2차원 배열을 사용하여 저장하고, for문을 사용하여 출력하였다.
