--- a/C언어/11.1-문자와 문자열.md
+++ b/C언어/11.1-문자와 문자열.md
@@ -33,8 +33,7 @@ _strlwr_s(s, sizeof(s)) // 문자열 s를 알파벳 소문자로 모두 변환
 
 ***
 
-<pre>문자열 길이 계산과 문자열 복사
-<code>
+```c
 #include<stdio.h>
 #include<string.h>    // 문자열 관련 함수를 사용하기 위해 사용
 
@@ -55,13 +54,15 @@ int main(void)
 	printf("5개 복사된 문자열 : %s\n", data);
 	printf("문자열의 길이 : %d\n", strlen(data));
 	return 0;
-}</code></pre>
+}
+```
+문자열 길이 계산과 문자열 복사
+
 strlen()함수를 사용하여 제시한 문자열의 길이를 구한 뒤 strcpy_s() 함수를 사용하여 문자열 전체를 복사하고 strncpy_s()함수를 사용하여 n개를 복사한 다음 문자열 크기를 출력하는 프로그램이다.
 
 ***
 
-<pre>문자열 2개의 크기 비교
-<code>
+```c
 #include<stdio.h>
 #include<string.h>  // 문자열 관련 함수를 사용하기 위해 선언
 
@@ -96,7 +97,10 @@ int main(void)
 		printf("비교된 문자열 : s1이 s2 문자열 앞에있음\n");
 	}
 	return 0;
-}</code></pre>
+}
+```
+문자열 2개의 크기 비교
+
 문자열을 비교할 때 아스키코드값이 큰 문자열은 사전 순서에 의해 뒤에 있고, 작은 문자열은 앞에 있다.
 
 s1 > s1이면 양수를 반환하고, s1이 s2보다 뒤에 있다는 뜻이다.
@@ -109,8 +113,7 @@ s1 < s1이면 음수를 반환하고, s1이 s2보다 앞에 있다.
 
 ***
 
-<pre>문자열 2개 결합
-<code>
+```c
 #include<stdio.h>
 #include<string.h>  // 문자열 관련 함수를 사용하기 위해 선언
 #define ST 2
@@ -129,13 +132,15 @@ int main(void)
 	strncat_s(s1, sizeof(s1), s2, ST);    // 문자열 일부 추가 결합
 	printf("문자열 일부 결합 : %s\n", s1);
 	return 0;
-}</code></pre>
+}
+```
+문자열 2개 결합
+
 strcat_s()함수를 사용해서 문자열 전체를 결합하고, strncat_s()함수를 사용하여 문자열 일부를 결합한 예제이다.
 
 ***
 
-<pre>문자열에서 특정 문자 검색
-<code>
+```c
 #include<stdio.h>
 #include<string.h>    //문자열 관련 함수를 사용하기 위해 선언
 
@@ -156,15 +161,17 @@ int main(void)
 	else
 		printf("문자열 %s에는 \'%c\'가 존재하지않습니다.\n", s, chk);
 	return 0;
-}</code></pre>
+}
+```
+문자열에서 특정 문자 검색
+
 strchr()함수를 사용하여 특정 문자를 검색하는 프로그램이다. 
 
 키보드로 입력한 알파벳이 주어진 문자열에 존재하는지 if ~ else문으로 판별하여 출력하였다.
 
 ***
 
-<pre>문자열에서 특정 문자와 문자열 검색
-<code>
+```c
 #include<stdio.h>
 #include<string.h>    // 문자열 관련 함수를 사용하기 위해 선언
 
@@ -180,7 +187,10 @@ int main(void)
 	printf("문자열에서 \"Pro\" 문자열이 포함된 부분 검색\n");
 	printf("strstr()함수 사용 : %s \n", strstr(s, "Pro"));
 	return 0;
-}</code></pre>
+}
+```
+문자열에서 특정 문자와 문자열 검색
+
 문자 'P'를 찾기 위해 strrchr()함수를 사용하여 문자열의 마지막 위치부터 검색했다.
 
 문자열 "Pro"를 찾기위해 strstr() 함수를 사용했다.
@@ -189,8 +199,7 @@ int main(void)
 
 ***
 
-<pre>문자열을 알파벳 역순으로 변환
-<code>
+```c
 #include<stdio.h>
 #include<string.h>  // 문자열 관련 함수를 사용하기 위해 선언
 
@@ -210,13 +219,15 @@ int main(void)
 	printf("문자열을 원래대로 변환\n");
 	printf("_strrev()함수 사용 : %s\n", str);
 	return 0;
-}</code></pre>
+}
+```
+문자열을 알파벳 역순으로 변환
+
 위의 코드는 _strrev() 함수를 사용하여 문자열을 역순으로 출력하는 프로그램이다.
 
 - - - 
 
-<pre>문자열을 알파벳 대소문자로 변환
-<code>
+```c
 #include<stdio.h>
 #include<string.h>  //문자열 관련 함수를 사용하기 위해 선언
 
@@ -235,7 +246,10 @@ int main(void)
 	printf("알파벳을 모두 소문자로 변환\n");
 	printf("_strlwr_s()함수 사용 : %s\n", str);
 	return 0;
-}</code></pre>
+}
+```
+문자열을 알파벳 대소문자로 변환
+
 _strupr_s()함수를 사용하면 문자열의 알파벳을 모두 대문자로 변환할 수 있다.
 
 _strlwr_s()함수를 사용하면 모두 소문자로 변환할 수 있다.
