Update 13-스트림과 파일 입출력.md

--- a/C언어/13-스트림과 파일 입출력.md
+++ b/C언어/13-스트림과 파일 입출력.md
@@ -102,8 +102,7 @@ fopen_s()와 같이 선언하여 파일을 열 때 에러가 발생하지 않으
 
 fopen_s()함수로 파일을 열어서 사용했다면 사용 후에는 반드시 fclose()함수로 닫아야 한다.
 
-<pre>파일 열고 닫기
-<code>
+```c
 #include<stdio.h>
 int main(void)
 {
@@ -120,13 +119,15 @@ int main(void)
 		fclose(fp);       // 파일 닫기 
 	}
 	return 0;
-} </code></pre>
+} 
+```
+파일 열고 닫기
+
 파일을 열고 닫는 예제를 실행해 보았다.
 
 if (fp == NULL)이면 포인터 변수가 NULL의 값을 가진 것이므로 파일 열기에 실패한 것이다.
 
-<pre>fprintf()로 파일에 문자열 출력
-<code>
+```c
 #include<stdio.h>
 
 int main(void)
@@ -146,7 +147,10 @@ int main(void)
 	else        // 파일 열기에 실패한 경우
 		printf("파일열기 실패\n");
 	return 0;
-}</code></pre>
+}
+```
+fprintf()로 파일에 문자열 출력
+
 쓰기 모드로 텍스트 파일을 생성한 다음 fprintf()함수를 사용하여 문자열을 텍스트 파일에 출력하는 프로그램이다.
 
 새롭게 생성되는 텍스트 파일은 프로그램 소스 코드가 존재하는 폴더 안에 생성된다.
@@ -162,8 +166,7 @@ fscanf_s() 함수는 텍스트 파일에서 문자열을 읽어올 때 사용한
 
 소스 코드와 똑같은 경로에 텍스트 파일을 생성해 두어야 한다.
 
-<pre>fgets()로 파일의 문자열을 줄 단위로 가져오기
-<code>
+```c
 insa.txt 
   Have a good time
   Congratualtions on your success.
@@ -197,8 +200,10 @@ int main(void)
 	else            // 파일 열기에 실패한 경우
 		printf("파일 열기 실패\n");
 	return 0;
-} </code></pre>
+}
+```
+fgets()로 파일의 문자열을 줄 단위로 가져오기
+
 텍스트 파일에서 줄 단위로 문자열을 처리하려면 fgets()함수를 사용해야 한다.
 
 미리 insa.txt 텍스트 파일을 만들어 주고, 텍스프 파일에 저장되어 있는 문자열을 줄 단위로 읽어와 화면에 출력하는 프로그램이다.
-
