--- a/C언어/15-선행처리기.md
+++ b/C언어/15-선행처리기.md
@@ -37,8 +37,7 @@
 
 사용자 정의 헤더 파일을 정의할 때는 선행처리기 #define 명령어를 사용한다.
 
-<pre>사용자 정의 헤더파일
-<code>
+```c
 // 사용자 정의 헤더파일 이름 myst.h
 #pragma once // 컴파일 과정시 단 한번만 실행하라는 명령
 
@@ -56,7 +55,10 @@ int main(void)
   printf("성명 : %s\n", NAME);
   printf("나이 : %d\n", AGE);
   return 0;
-}</code></pre>
+}
+```
+사용자 정의 헤더파일
+
 사용자 정의 헤더 파일은 myst.h를 불러와 출력하는 프로그램이다.
 
 소스코드와 동일한 위치에 존재하는 헤더 파일을 불러올 때는 큰따옴표로 헤더 파일을 묶어 #include "myst.h"와 같이 해야한다.
@@ -77,8 +79,7 @@ int main(void)
 #define GOB(a) (a)*(a)    // 매크로 정의<code></pre>
 #define 명령으로 정수형 상수와 문자형 상수, 실행문과 매크로에 대한 정의를 선언하여 사용할 수 있다.
 
-<pre>매크로 상수 사용하여 원의 넓이 출력
-<code>
+```c
 #include <stdio.h>
 
 #define PI 3.141592       // 매크로 상수 정의
@@ -93,11 +94,13 @@ int main(void)
 
   printf("원의 넓이 : %f\n", AREA);
   return 0;
-}</code></pre>
+}
+```
+매크로 상수 사용하여 원의 넓이 출력
+
 파이 값과 원의 넓이를 구하는 공식을 각각 매크로 상수 PI와 AREA로 정의했다.
 
-<pre>매크로 함수로 제곱 구하기
-<code>
+```c
 #include<stdio.h>
 
 #define swap1(a) (a * a)    // 매크로 함수 정의
@@ -116,7 +119,10 @@ int main(void)
   printf("괄호 없는 %d의 제곱근 %d\n", num, swap1(num + 5));
   printf("괄호 있는 %d의 제곱근 %d\n", num, swap2(num + 5));
   return 0;
-}</code></pre>
+}
+```
+매크로 함수로 제곱 구하기
+
 예를 들어 키보드로 2의 값을 입력 받으면 (2 + 5 * 2 + 5)로 계산 되어서 17이 출력되고, 매개변수를 괄호로 묶어주면 ((2 + 5) * (2 + 5))로 계산 되어 49가 출력된다.
 
 따라서 매크로 함수를 정의할 때 매개변수를 ()로 묶어야 정확한 결과값을 산출할 수 있다.
@@ -131,8 +137,7 @@ int main(void)
 #define MAX 1000  // 매크로 상수 다시 정의 </code></pre>
 #undef는 #define으로 정의한 매크로를 해제하는 선행처리기 명령이다.
 
-<pre>매크로 취소 후 다시 정의
-<code>
+```c
 #include<stdio.h>
 
 #define MAX 50  // 매크로 상수 정의
@@ -157,7 +162,10 @@ int main(void)
 
   printf("1부터 %d까지의 합 : %d\n", MAX, hap);
   return 0;
-}</code></pre>
+}
+```
+매크로 취소 후 다시 정의
+
 50으로 선언한 매크로를 취소하고, 100으로 재정의 했다.
 
 #define 명령으로 이미 정의한 매크로를 #undef명령으로 해제하지 않고 매크로를 재정의하면 경고 메세지가 출력된다.
